chat/overlays/prod/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chocoletter-chat-route
  namespace: chocoletter
spec:
  parentRefs:
    - name: web-gateway
      namespace: nginx-gateway
      sectionName: http-wildcard
    - name: web-gateway
      namespace: nginx-gateway
      sectionName: https-wildcard
  hostnames:
    - chocoletter-chat.sonhs.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: chocoletter-chat-service
          port: 80
